# NovaTerm

./: .clang-format  .gitignore  .gitmodules  .mcp.json  CMakeLists.txt  CMakePresets.json  README.md
.claude/skills/: .em_skill_meta.json
.claude/skills/shared/: project_detect.py  tool_config.py
cmake/: FindQTermWidget.cmake  lxqt2-build-tools-config-version.cmake  lxqt2-build-toolsConfig.cmake
cmake/msvc_compat/: posix_signal.h  termios.h  unistd.h  wcwidth.h
cmake/msvc_compat/sys/: ioctl.h  mman.h  param.h  resource.h  time.h
docs/: startup-dark-theme-no-white-flash.md  theme-switch-crash-scrollbar-dangling-pointer.md
docs/superpowers/plans/: 2026-06-13-windtermqt-plan.md
docs/superpowers/specs/: 2026-06-13-windtermqt-design.md
resources/: resources.qrc
resources/translations/: novaterm_en.qm  novaterm_en.ts  novaterm_zh_CN.qm  novaterm_zh_CN.ts
src/: CMakeLists.txt  main.cpp
src/app/: Application.cpp  Application.h  MainWindow.cpp  MainWindow.h
src/core/: ConfigManager.cpp  ConfigManager.h  LanguageManager.cpp  LanguageManager.h
src/pages/: AboutPage.cpp  AboutPage.h  SessionPage.cpp  SessionPage.h  SettingsPage.cpp  SettingsPage.h  TerminalPage.cpp  TerminalPage.h
src/terminal/: TerminalView.cpp  TerminalView.h  WinConPty.cpp  WinConPty.h
src/transport/: ITransport.h
